--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -16,12 +16,12 @@ header {
 .link {
     color: white;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 20px;
     height: 100%;
 }
 
 .logotype {
-    width: 120px;
+    width: 120px!important;
 }
 
 footer {
@@ -35,4 +35,34 @@ footer>nav {
     width: 100%;
     height: 100%;
     text-align: center;
+}
+
+[data-title]:hover:after {
+    opacity: 1;
+    transition: all 0.1s ease 0.2s;
+    visibility: visible;
+}
+
+[data-title]:after {
+    content: attr(data-title);
+    font-size: 15px;
+    background-color: #ffeded;
+    color: #111;
+    position: absolute;
+    padding: 1px 5px 2px 5px;
+    bottom: -1.6em;
+    left: 10%;
+    white-space: nowrap;
+    box-shadow: 1px 1px 3px #222222;
+    opacity: 0;
+    z-index: 99999;
+    visibility: hidden;
+}
+
+[data-title] {
+    position: relative;
+}
+
+.link img {
+    width: 40px;
 }
