--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 html,
 body {
     width: 100%;
     min-height: 100%;
-    font-family: math;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-family: "Roboto", serif;
     background-color: rgb(241, 241, 241);
 }
 
