--- a/src/components/other/other.css
+++ b/src/components/other/other.css
@@ -133,6 +133,7 @@
     position: absolute;
     background: #00000097;
     display: none;
+    backdrop-filter: blur(3px);
 }
 
 .banner {
@@ -281,9 +282,13 @@ iframe {
 
 .sorting {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     padding-left: 45px;
     padding-top: 20px;
+}
+
+.dropdown {
+    display: inline-block;
 }
 
 .sort {
@@ -294,10 +299,6 @@ iframe {
     padding: 10px;
     border-radius: 10px;
     border: 1px solid black;
-}
-
-.sort_hidden {
-    display: flex;
 }
 
 .sort {
@@ -348,19 +349,113 @@ iframe {
     left: 38%;
 }
 
-
-/* .sort_btn_one:hover .sort_one {
-    visibility: visible;
-}
-
-.sort_btn_two:hover .sort_two {
-    visibility: visible;
-}
-
-.sort_btn_three:hover .sort_three {
-    visibility: visible;
-} */
-
 .sort_btn:hover {
     background-color: rgba(0, 0, 0, 0.095);
+}
+
+.dropdown_one:hover .sort_one {
+    visibility: visible;
+}
+
+.dropdown_two:hover .sort_two {
+    visibility: visible;
+}
+
+.dropdown_three:hover .sort_three {
+    visibility: visible;
+}
+
+.basket-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.basket-card {
+    width: 10%;
+    margin: 18px;
+    border: 1px solid black;
+    border-radius: 20px;
+}
+
+.basket_img {
+    width: 100%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    cursor: pointer;
+}
+
+.basket-card_title {
+    font-size: 14px;
+}
+
+.basket-card_text {
+    padding: 0 2px;
+}
+
+.basket-card_text {
+    font-size: 13px;
+}
+
+.basket-card_delete {
+    padding: 5px;
+    border: none;
+    background: #ffe6e6;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 5px;
+}
+
+.basket-card_text>* {
+    margin-bottom: 3px;
+}
+
+.basket-card_delete:hover {
+    background: #ffd3d3;
+}
+
+.basket-btn_cont {
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.basket {
+    display: flex;
+    flex-direction: column;
+    padding-top: 18px;
+}
+
+.basket-cards_title {
+    text-align: center;
+}
+
+.basket_summ {
+    position: absolute;
+}
+
+.basket-card_quantity {
+    display: flex;
+    align-items: center;
+}
+
+.input_quantity {
+    width: 40px;
+    border: none;
+    outline: navajowhite;
+    text-align: center;
+    height: 14px;
+    margin-left: 10px;
+}
+
+.order_btn {
+    width: 200px;
+    margin: 0 auto;
+    padding: 10px;
+    border: none;
+    background: #000000;
+    color: white;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    cursor: pointer;
+    font-size: 18px;
 }
