updates, add checkout

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -35,6 +35,9 @@ footer>nav {
     width: 100%;
     height: 100%;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 [data-title]:hover:after {
