--- a/src/components/other/other.css
+++ b/src/components/other/other.css
@@ -450,6 +450,7 @@ iframe {
 .order_btn {
     width: 200px;
     margin: 0 auto;
+    text-align: center;
     padding: 10px;
     border: none;
     background: #000000;
@@ -458,4 +459,122 @@ iframe {
     border-bottom-left-radius: 10px;
     cursor: pointer;
     font-size: 18px;
+    text-decoration: none;
+}
+
+.checkout {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form_checkout {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    background: black;
+    padding: 30px 50px;
+    margin-top: 20px;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 0px #000000;
+}
+
+.checkout_label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.checkout_label input {
+    width: 100%;
+    border: 1px solid #666666;
+    outline: none;
+    background: #000000;
+    color: white;
+    height: 40px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 15px;
+}
+
+.checkout_label_span {
+    font-size: 12px;
+    display: inline-block;
+    margin-bottom: 2px;
+}
+
+.checkout_label input:focus {
+    box-shadow: 1px 1px 10px 0px #ff0000;
+    border: none;
+}
+
+.PhoneInputCountryIcon {
+    width: 40px;
+    height: 40px;
+}
+
+.PhoneInputCountry {
+    position: absolute;
+    padding-left: 5px;
+}
+
+.submit_form {
+    width: 200px;
+    margin: 20px 0;
+    text-align: center;
+    padding: 10px;
+    border: none;
+    background: #000000;
+    color: white;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    cursor: pointer;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.payment-options {
+    box-shadow: 2px 2px 10px 0px #000000;
+    background-color: #000000;
+    color: white;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.payment-option {
+    margin-bottom: 10px;
+}
+
+.payment-option label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.payment-option input[type="radio"] {
+    margin-right: 10px;
+}
+
+.payment-options h2 {
+    margin-bottom: 10px;
+}
+
+.checkout_title {
+    margin-top: 15px;
+}
+
+.summary {
+    margin-top: 20px;
+    border: 1px solid;
+    padding: 20px;
+}
+
+.summary p {
+    margin-top: 10px;
+}
+
+.summary_title {
+    text-align: center;
 }
